--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:19.2.0'
     implementation 'com.google.firebase:firebase-auth:20.0.0'
     implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 //    implementation 'com.google.firebase:firebase-admin:7.0.1'
 //    implementation 'com.google.api-client:google-api-client-android:1.23.0'
     testImplementation 'junit:junit:4.12'
