--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     //noinspection GradleCompatible
     implementation 'com.android.support:recyclerview-v7:23.0.1'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 //    implementation 'com.google.firebase:firebase-admin:7.0.1'
 //    implementation 'com.google.api-client:google-api-client-android:1.23.0'
     testImplementation 'junit:junit:4.12'
