--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Screens.NotificationScreen"></activity>
+        <activity android:name=".Screens.MaybeMatch"></activity>
+        <activity android:name=".Screens.NotificationScreen" />
         <activity android:name=".Screens.SearchScreen" />
         <activity android:name=".Screens.CustomerMenu" />
         <activity android:name=".Screens.RegisterScreen" />
