--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".Screens.NewManager" />
         <activity android:name=".Screens.ManagerMenu" />
         <activity android:name=".Screens.EventsScreen" />
+        <activity android:name=".Screens.EditClientsScreen" />
         <activity android:name=".Screens.ProfileScreen" />
         <activity android:name=".Screens.UploadScreen" />
         <activity android:name=".Screens.MainActivity">
